fix(java): expose EvaluationException instead of the RuntimeException (#315)